--- a/index.html
+++ b/index.html
@@ -6,11 +6,32 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Demo Portfolio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-
+    <section class="top-banner">
+        <div class="half-width">
+            <h1>Welcome to</h1>
+            <h1><span class="coloring">Demo</span> Portfolio HAIIIYYAAAAA</h1>
+            <h3>Freelance Data Analyst & Research Assistant</h3>
+            <p class="align">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+                ut
+                labore
+                et dolore
+                magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
+                commodo
+                consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
+                pariatur.</p>
+            <a class="link-button" target="_blank" href="https://www.linkedin.com/in/sulaimanahmed/">HIRE ME</a>
+        </div>
+        <div class="half-width">
+            <img src="images/my-bg.png" alt="">
+        </div>
+    </section>
 </body>
 
 </html>
