--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <section class="top-banner">
         <div class="half-width">
             <h1>Welcome to</h1>
-            <h1><span class="coloring">Demo</span> Portfolio HAIIIYYAAAAA</h1>
+            <h1><span class="coloring">Demo</span> Portfolio</h1>
             <h3>Freelance Data Analyst & Research Assistant</h3>
             <p class="align">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
                 ut
@@ -30,6 +30,26 @@
         </div>
         <div class="half-width">
             <img src="images/my-bg.png" alt="">
+        </div>
+    </section>
+    <section class="middle">
+        <div class="half-width">
+            <img src="images/my-bg2.png" alt="">
+        </div>
+        <div class="half-width2">
+            <h1>Dream BIG</h1>
+            <h2>Become a Web Developer</h2>
+            <p class="align">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+                ut
+                labore
+                et dolore
+                magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
+                commodo
+                consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
+                pariatur.</p>
+            <a class="link-button" target="_blank"
+                href="https://drive.google.com/file/d/1aLRgYYy2_F5KsT1lcaOy5RDk2t-lsZE2/view?usp=sharing">DOWNLOAD
+                RESUME</a>
         </div>
     </section>
 </body>
