--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <section class="top-banner">
+    <section class="top-banner flexible-container">
         <div class="half-width">
             <h1>Welcome to</h1>
             <h1><span class="coloring">Demo</span> Portfolio</h1>
@@ -32,7 +32,7 @@
             <img src="images/my-bg.png" alt="">
         </div>
     </section>
-    <section class="middle">
+    <section class="middle flexible-container">
         <div class="half-width">
             <img src="images/my-bg2.png" alt="">
         </div>
@@ -52,6 +52,31 @@
                 RESUME</a>
         </div>
     </section>
+    <section class="experience-area">
+        <h1>Experiences</h1>
+        <div class="flexible-container">
+            <div class="full-stack box-shad half-width">
+                <h1>Full Stack Web Developer</h1>
+                <h3 class="coloring">2022-Present | Pro level Developer</h3>
+                <p class="align">I am the master of HTML, CSS and Javascript. I know everything needed to make a website
+                    function,
+                    efficient. I didn't stop with the web. I went beyond with most popular Javascript framework called
+                    Vue
+                    JS. I even know the deployment, server and security. I will give you 100% web solution.</p>
+            </div>
+            <div class="baby box-shad half-width">
+                <h1>Baby Web Developer</h1>
+                <h3 class="coloring">2020-2021 | Programming Hero Learner</h3>
+                <p class="align">They didn't offer me a job. But I made myself as a remove web developer. I made their
+                    website and
+                    showed
+                    it to them. They liked it. And uploaded the content. It was fun working at Programming Hero.</p>
+            </div>
+        </div>
+    </section>
+    <footer>
+        <p>© Ahmed Sulaiman 2021, a Programming Hero initiative.</p>
+    </footer>
 </body>
 
 </html>
